Fixed overflow in lightbox

--- a/src/main/webapp/scss/echoed-lightbox.scss
+++ b/src/main/webapp/scss/echoed-lightbox.scss
@@ -149,6 +149,8 @@ $twitterColor: #4099FF;
         font-size: 12px;
         color: #111;
         font-family: $textFontFamily;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 }
 
